@@ -1,3 +1,10 @@
+2004-05-26  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/stringutils.cc (apply_modifiers): Validate the UCS-4 code
+	point returned by Unicode::tolower() or Unicode::totitle() before
+	appending it to the string.  This is necessary because for example
+	converting U+00DF to title case is an invalid operation.
+
 2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* src/translation.cc (compose_impl): Print a warning message to
